Use a better contrasting color for separating constraint labels; fixes #1744

--- a/app/assets/stylesheets/blacklight/_constraints.scss
+++ b/app/assets/stylesheets/blacklight/_constraints.scss
@@ -32,7 +32,7 @@
   }
 
   .filter-name:after {
-    @extend .text-muted;
+    color: $gray-100;
     content: "❯";
     font-size: 90%;
     padding-left: $caret-width;
